<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    android:id="@+id/constraintLayautReg"
    android:background="@drawable/sunny_background">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/registration"
        android:textColor="@color/title_messengere"
        android:textSize="41sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutRegistr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <EditText
            android:id="@+id/editTextEmailReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextNameReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:inputType="textCapWords"
            android:hint="@string/enter_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextLastNameReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:inputType="textCapWords"
            android:hint="@string/enter_last_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextAgeReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:inputType="number"
            android:hint="@string/enter_age"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="42dp"
        android:text="@string/registrait"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>