<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutSignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:background="@drawable/sunny_background">

    <LinearLayout
        android:id="@+id/linerLayoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:src="@drawable/telegram" />

        <TextView
            android:id="@+id/textViewMessenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messenger"
            android:textColor="@color/title_messengere"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="39dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerLayoutTitle">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:hint="@string/enter_password"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="39dp"
        android:text="@string/login"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:backgroundTint="#3C3597"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textViewFogotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textSize="17sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textViewRegistr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="39dp"
        android:text="@string/registrate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>